[package]
name = "bluetui"
version = "0.8.1"
authors = ["Badr Badri <contact@pythops.com>"]
license = "GPL-3.0"
edition = "2024"
description = "TUI for managing bluetooth on Linux"
readme = "Readme.md"
homepage = "https://github.com/pythops/bluetui"
repository = "https://github.com/pythops/bluetui"

[dependencies]
async-channel = "2"
bluer = { version = "0.17", features = ["full"] }
crossterm = { version = "0.29", default-features = false, features = [
    "event-stream",
] }
futures = "0.3"
ratatui = "0.30"
tokio = { version = "1", features = ["full"] }
dirs = "6"
toml = "0.9"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive", "cargo"] }
tui-input = "0.15"
anyhow = "1"
libdbus-sys = { version = "0.2", features = ["vendored"] }

[profile.release]
strip = true
codegen-units = 1
lto = "fat"
opt-level = 3
