[package]
name = "bluetui"
version = "0.8.1"
authors = ["Badr Badri <contact@pythops.com>"]
license = "GPL-3.0"
edition = "2024"
description = "TUI for managing bluetooth on Linux"
readme = "Readme.md"
homepage = "https://github.com/pythops/bluetui"
repository = "https://github.com/pythops/bluetui"

[dependencies]
async-channel = "2"
bluer = { version = "0.17", features = ["bluetoothd"] }
crossterm = { version = "0.29", default-features = false, features = [
    "event-stream",
] }
futures = "0.3"
ratatui = "0.30"
tokio = { version = "1", features = ["full"] }
dirs = "6"
toml = "0.9"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
tui-input = "0.15"
anyhow = "1"
libdbus-sys = { version = "0.2", features = ["vendored"] }

[dev-dependencies]
insta = "1"
rstest = "0.26"

[profile.release]
strip = true
codegen-units = 1
lto = "fat"
opt-level = 3

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
uninlined_format_args.level = "allow"
trivially_copy_pass_by_ref.level = "deny"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
must_use_candidate = "allow"
